SUBDIRS =

EXTRA_DIST=                 \
Aspect.h                    \
Basic.h                     \
Commander.h                 \
CommanderView.h             \
CrossAspect.h               \
CrossRail.h                 \
CurveAspect.h               \
CurveRail.h                 \
DirEnv.h                    \
RailEnv.h                   \
Dir.h                       \
Event.h                     \
EventProgram.h              \
Filter.h                    \
FinderAspect.h              \
Finder.h                    \
ForkAspect.h                \
ForkDirSelector.h           \
ForkRail.h                  \
Game.h                      \
LocomotiveAspect.h          \
Locomotive.h                \
Message.h                   \
Point.h                     \
ProgramEditor.h             \
Rail.h                      \
RailMap.h                   \
RailPen.h                   \
RailVehicle.h               \
Range.h                     \
Semaphore.h                 \
Sensor.h                    \
Sim.h                       \
SimView.h                   \
StraightAspect.h            \
StraightRail.h              \
TerminalWindow.h            \
Train.h                     \
Vehicle.h                   \
WagonAspect.h               \
Wagon.h                     \
Window.h                     
